Fixed css error with extra width on mobile grid pages

--- a/assets/static/site/mobile.css
+++ b/assets/static/site/mobile.css
@@ -136,7 +136,7 @@
     position: relative;
     width: 100%;
     margin: 10px;
-    padding: 10px;
+    padding: 10px 0;
     text-align: center;
 }
 
